# polar-3gpp-c

./: .gitignore  CMakeLists.txt  README.md
include/: polar_3gpp.h
src/: pi_il_max.inc  polar_3gpp.c  q_nmax.inc
tests/: ecc_common.h  test_ecc.c  test_ecc_crop.c  test_ecc_scatter.c  test_ecc_scatter_benchmark.cpp  test_ecc_scatter_custom1.c  test_ecc_scatter_pdcch.c  test_roundtrip.c
